# curio

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/agents/: analyst.py  critic_agent.py  llm.py  pattern_agent.py  prompt_loader.py  report_agent.py  run.py  schemas.py  strategy_agent.py
app/analytics/: clustering.py  metrics.py  pattern_mining.py  strategy_labels.py
app/config/: settings.py
app/dashboard/: agent_panel.py  charts.py  formatters.py  main.py  styles.py  theme.py
app/evaluation/: case_runner.py  golden_cases.py  grader.py  metrics.py  run.py  runner.py  schemas.py
app/graph/: state.py  workflow.py
app/ingestion/seoul_event/: client.py  fetch.py  run.py
app/ingestion/tour/: client.py  fetch.py  run.py
app/ingestion/weather/: client.py  fetch.py  run.py
app/io/: paths.py
app/monitoring/: airflow_callbacks.py  langfuse_trace.py  slack_notify.py
app/pipeline/: load.py  snapshot.py
app/preprocessing/feature/: build.py  run.py  synthetic_log.py
app/preprocessing/seoul_event/: transform.py
app/strategy/: engine.py
dags/: curio_etl_pipeline.py
docker/airflow/: Dockerfile  entrypoint.sh
prompts/: critic_agent.md  report_agent.md  strategy_agent.md
tests/: test_agent_pipeline.py  test_clustering.py  test_dashboard_agent_panel.py  test_dashboard_data.py  test_dashboard_formatters.py  test_eval_grader.py  test_eval_metrics.py  test_langfuse_trace.py  test_metrics.py  test_slack_notify.py  test_strategy_engine.py  test_strategy_labels.py  test_synthetic_log.py
(+2 files in other folders)
