[project]
name = "curio"
version = "0.1.0"
description = "AI-based content operations strategy analysis system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langfuse>=4.9.0",
    "langgraph>=1.2.5",
    "mlxtend>=0.25.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Could not find the number of physical cores:UserWarning",
]
